--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "example-monorepo",
   "version": "0.0.0",
   "scripts": {
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "prettier": "^3.2.5"
   },
   "engines": {
     "node": ">=18"
