--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,13 +7,9 @@
   "scripts": {
     "build": "tsup src/*",
     "lint:eslint": "eslint --max-warnings 0 --ext .ts,.tsx .",
-    "lint:prettier": "prettier './src/**/*.{ts,tsx,js,json,css}' --check",
-    "changeset": "changeset",
-    "version": "changeset version",
-    "publish": "changeset publish"
+    "lint:prettier": "prettier './src/**/*.{ts,tsx,js,json,css}' --check"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.1",
     "@example-monorepo/dev-config": "*",
     "tsup": "^8.0.2"
   },
